# NEU_skeletal-ml

./: .gitignore  DOC1.docx  DOC1.md  DOC2.docx  DOC2.md  DOCUMENTATION.md  README.md  data_loader.py  evaluate.py  feature_extraction.py  main.py  pyproject.toml  show_predict.py  show_skeleton.py  train_ml.py
.claude/: settings.json
config/neu/: test_bone.yaml  test_joint.yaml  train_bone.yaml  train_joint.yaml  train_joint_agcn.yaml  train_joint_agcn_dropout.yaml  train_joint_agcn_dropout2d.yaml  train_joint_resnet.yaml  train_joint_stgcn.yaml  train_joint_stgcn_aug.yaml  train_joint_stgcn_lr.yaml  train_joint_stgin.yaml
data/: readme.docx
data/test/: S002C003P008R001A004.skeleton  S002C003P009R001A001.skeleton  S002C003P010R002A007.skeleton  S002C003P012R002A006.skeleton  S002C003P013R001A001.skeleton  S003C001P002R001A004.skeleton  S003C001P015R001A005.skeleton  S003C001P015R002A004.skeleton  S003C001P016R002A007.skeleton  S003C001P017R001A006.skeleton  S003C001P017R002A003.skeleton  S003C001P018R001A003.skeleton  S003C001P018R002A007.skeleton  S003C001P018R002A010.skeleton  S003C001P019R001A004.skeleton  S003C001P019R001A006.skeleton  S003C002P001R002A004.skeleton  S003C002P008R001A005.skeleton  S003C002P015R002A004.skeleton  S003C002P018R002A003.skeleton  S003C003P001R001A003.skeleton  S003C003P001R002A007.skeleton  S003C003P007R001A003.skeleton  S003C003P008R002A010.skeleton  S003C003P015R001A003.skeleton  S003C003P015R002A003.skeleton  S003C003P015R002A005.skeleton  S003C003P016R001A004.skeleton  S003C003P017R001A004.skeleton  S003C003P019R001A001.skeleton  S003C003P019R001A003.skeleton  S004C001P003R001A007.skeleton  S004C001P003R002A003.skeleton  S004C001P020R001A005.skeleton  S004C001P020R002A006.skeleton  S004C002P003R001A004.skeleton  S004C003P003R001A001.skeleton  S004C003P003R001A006.skeleton  S004C003P003R002A006.skeleton  S004C003P007R002A007.skeleton  (+125 more)
scripts/: skeletal-dl.ps1  skeletal-dl.sh
tests/: test_data_loader.py
(+442 files in other folders)
