[project]
name = "skeletal-ml"
version = "0.1.0"
description = "基于手工特征与传统机器学习（SVM/RF/AdaBoost）的 NTU RGB-D 人体骨架动作识别"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.scripts]
skeletal-train = "skeletal_ml.cli.train:main"
skeletal-eval = "skeletal_ml.cli.evaluate:main"
skeletal-predict = "skeletal_ml.cli.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skeletal_ml"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
