[project]
name = "skeletal-ml"
version = "0.1.0"
description = "基于手工特征与传统机器学习（SVM/RF/AdaBoost）的 NTU RGB-D 人体骨架动作识别"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.0.0",
    "tensorboardx>=2.0",
    "tqdm>=4.60",
    "pyyaml>=6.0",
]

[project.scripts]
skeletal-train = "skeletal_ml.cli.train:main"
skeletal-eval = "skeletal_ml.cli.evaluate:main"
skeletal-predict = "skeletal_ml.cli.predict:main"
skeletal-show = "skeletal_ml.cli.show:main"
skeletal-train-dl = "skeletal_ml.cli.train_dl:main"
skeletal-ensemble = "skeletal_dl.ensemble:main"
skeletal-gendata = "skeletal_dl.data_gen.neu_gendata:main"
skeletal-genbone = "skeletal_dl.data_gen.gen_neu_bone:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skeletal_ml", "src/skeletal_dl"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
